Fix spacing of typicons

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -119,7 +119,7 @@ a.sidebar-nav-item:focus {
 
 .typcn {
   font-family: 'typicons';
-  margin: 0 20px;
+  margin: 0 7%;
   font-size: 140%;
   color: #F3EFF0;
 }
